--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://sanvidurath.github.io/notes-app/",
+  "homepage": "https://sanvidurath.github.io/Notes-app/",
   "name": "notes-app",
   "private": true,
   "version": "0.0.0",
